force-app/main/default/objects/Consumption_Update__c/Consumption_Update__c.object-meta.xml
<CustomObject>
    <label>Consumption Update</label>
    <nameField>
        <label>Consumption Update&apos;s Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consumption Updates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>