force-app/main/default/objects/Consumption_Update__c/fields/Energy_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Energy_Consumption__c</fullName>
    <label>Energy Consumption (kWh)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>