force-app/main/default/objects/Consumption_Update__c/fields/External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>External_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>External System ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>