force-app/main/default/objects/Consumption_Update__c/fields/Monthly_Bill__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Bill__c</fullName>
    <label>Monthly Bill</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>