force-app/main/default/objects/Consumption_Update__c/fields/My_Savings__c.field-meta.xml
<CustomField>
    <fullName>My_Savings__c</fullName>
    <label>My Savings</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>