force-app/main/default/objects/Consumption_Update__c/fields/Net_Metering_Credit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Net_Metering_Credit_Rate__c</fullName>
    <label>Net Metering Credit Rate</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>