force-app/main/default/objects/Consumption_Update__c/fields/Net_Metering_Credits_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Net_Metering_Credits_Allocated__c</fullName>
    <label>Net Metering Credits Allocated</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>