force-app/main/default/objects/Consumption_Update__c/fields/Utility_Account_Log__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Account Log</label>
    <referenceTo>Utility_Account_Log__c</referenceTo>
    <relationshipLabel>Consumption Updates</relationshipLabel>
    <relationshipName>Consumption_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>